@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>387 79 356 240 0 0 1024 746 </string>
+	<string>279 106 356 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
 	<string>291.0</string>
 	<key>IBLockedObjects</key>
@@ -13,6 +13,6 @@
 		<integer>168</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>6L29</string>
+	<string>6L60</string>
 </dict>
 </plist>
