@@ -5,7 +5,7 @@
 	<key>IBDocumentLocation</key>
 	<string>416 89 356 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
-	<string>283.0</string>
+	<string>291.0</string>
 	<key>IBLockedObjects</key>
 	<array/>
 	<key>IBOpenObjects</key>
@@ -13,6 +13,6 @@
 		<integer>168</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>6L29</string>
+	<string>6L60</string>
 </dict>
 </plist>
